k8s/apps/media/arr/lidarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: arr
  labels:
    app: lidarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lidarr
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: lidarr
      labels:
        app: lidarr
    spec:
      nodeSelector:
        topology.kubernetes.io/zone: hsp-proxmox0
      securityContext:
        runAsNonRoot: true
        runAsUser: 2501
        runAsGroup: 2501
        fsGroup: 2501
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      dnsConfig:
        options:
          # Lower ndots to avoid search-domain expansion issues (musl/glibc resolver short-circuit)
          # and ensure external and cluster FQDNs resolve correctly.
          # Use this on other Alpine based containers if I face similar issues.
          - name: ndots
            value: "1"
      containers:
        - name: lidarr
          image: ghcr.io/home-operations/lidarr:3.1.3@sha256:b1e206e02bcacf1b540a813be74afb4f788114bbb540830478e5eb0e469c2162 # renovate: datasource=docker depName=ghcr.io/home-operations/lidarr packageName=ghcr.io/home-operations/lidarr versioning=docker registryUrl=https://ghcr.io
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          ports:
            - name: http
              containerPort: 8686
          volumeMounts:
            - name: lidarr-config
              mountPath: /config
            - name: tmp
              mountPath: /tmp
            - name: data
              mountPath: /app/data
          resources:
            requests:
              cpu: 50m
              memory: 192Mi
            limits:
              cpu: 1000m
              memory: 256Mi
      volumes:
        - name: lidarr-config
          persistentVolumeClaim:
            claimName: lidarr-config
        - name: tmp
          emptyDir: {}
        - name: data
          nfs:
            server: 192.168.65.250
            path: /volume1/media
