k8s/apps/media/arr/lidarr/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lidarr
  namespace: arr
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - "lidarr.k8s.ghiot.be"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: lidarr
          port: 80
